--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<div class="header_logo">
-				<img src="/assets/img/main logo.svg" alt="" />
+				<img src="assets/img/main logo.svg" alt="" />
 			</div>
 		</header>
 
@@ -44,7 +44,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -57,7 +57,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -70,7 +70,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -83,7 +83,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -100,7 +100,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -113,7 +113,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -126,7 +126,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -143,7 +143,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -156,7 +156,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
@@ -169,7 +169,7 @@
 						<p class="card_title">Капучино</p>
 
 						<div class="img_cappuccino">
-							<img src="/assets/img/cappuccino.png" alt="" />
+							<img src="assets/img/cappuccino.png" alt="" />
 						</div>
 
 						<div class="card_price_volume">
