--- a/index.html
+++ b/index.html
@@ -181,6 +181,6 @@
 			</div>
 		</main>
 
-		<script src="/assets/js/app.js" defer></script>
+		<script src="assets/js/app.js" defer></script>
 	</body>
 </html>
