--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
               <div class="card_count_of_goods">
                 <div id="countMinus" class="count_minus">
-                  <img src="/assets/img/minus.svg" alt="" />
+                  <img src="assets/img/minus.svg" alt="" />
                 </div>
                 <span id="countGoods">1</span>
                 <div id="countPlus" class="count_plus">
-                  <img src="/assets/img/plus.svg" alt="" />
+                  <img src="assets/img/plus.svg" alt="" />
                 </div>
               </div>
             </div>
