--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
       <dialog id="shopCart">
         <div class="content_dialog">
           <div class="title_dialog">
+            <div><span></span></div>
             <div>Корзина</div>
             <button class="close_btn" id="closeCart">
               <img src="assets/img/Group 12.svg" alt="">
@@ -216,13 +217,21 @@
               <p>Карамельный сироп</p>
               <p>300 мл</p>
             </div>
-            <div>
+            <div class="cost">
               <span>250 рублей</span>
 
             </div>
           </div>
           <div class="more">
-
+            <div class="more_title">
+              Что-то еще?
+            </div>
+            <div class="items_grid">
+              <div class="item_grid">
+                <div>Сендвич<br>с куричей</div>
+                <div><img src="assets/img/pngegg 3.png" alt=""></div>
+              </div>
+            </div>
           </div>
         </div>
       </dialog>
