--- a/index.html
+++ b/index.html
@@ -228,10 +228,25 @@
             </div>
             <div class="items_grid">
               <div class="item_grid">
-                <div>Сендвич<br>с куричей</div>
+                <div class="title_mini">Сендвич<br>с куричей</div>
                 <div><img src="assets/img/pngegg 3.png" alt=""></div>
+                <div class="cost_grid">
+                  <span>150 руб</span>
+                  <span>1 шт</span>
+                </div>
+              </div>
+              <div class="item_grid">
+                <div class="title_mini">Сендвич<br>с куричей</div>
+                <div><img src="assets/img/pngegg 3.png" alt=""></div>
+                <div class="cost_grid">
+                  <span>150 руб</span>
+                  <span>1 шт</span>
+                </div>
               </div>
             </div>
+          </div>
+          <div class="go_basket">
+            <button >Оформить заказ</button>
           </div>
         </div>
       </dialog>
