--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </div>
               </div>
               <div class="item_grid">
-                <div class="title_mini">Сендвич<br>с куричей</div>
+                <div class="title_mini">Сендвич<br>с лососем</div>
                 <div><img src="assets/img/pngegg 3.png" alt=""></div>
                 <div class="cost_grid">
                   <span>150 руб</span>
