--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               </div>
             </div>
           </div>
-          <div class="go_basket">
+          <div class="go_basket bottom_btn">
             <button >Оформить заказ</button>
           </div>
         </div>
