--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 						<div><span></span></div>
 						<div>Корзина</div>
 						<button class="close_btn" id="closeCart">
-							<img src="assets/img/Group 12.svg" alt="" />
+							<img src="assets/img/crosshair.svg" alt="" />
 						</button>
 					</div>
 					<div class="items_dialog">
@@ -381,7 +381,7 @@
 					<div class="card_good" id="card">
 						<div class="close_modal_btn">
 							<button id="close-modal-btn" class="krest_btn">
-								<img src="assets/img/Group 12.svg" alt="krest" />
+								<img src="assets/img/crosshair.svg" alt="krest" />
 							</button>
 						</div>
 						<div class="top_card">
