--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="main_window">
 				<div class="search">
 					<div class="search_img">
-						<img src="/assets/img/magnifier.svg" alt="" />
+						<img src="assets/img/magnifier.svg" alt="" />
 					</div>
 					<input type="text" placeholder="Найти" />
 				</div>
