--- a/index.html
+++ b/index.html
@@ -350,12 +350,40 @@
 							<span>250 рублей</span>
 						</div>
 					</div>
+					<div class="items_dialog">
+						<div class="items">
+							<div><img src="assets/img/cappuccino.png" alt="" /></div>
+						</div>
+						<div class="item_info">
+							<p>Капичино</p>
+							<p>Карамельный сироп</p>
+							<p>300 мл</p>
+						</div>
+						<div class="cost">
+							<span>250 рублей</span>
+						</div>
+					</div>
+					<div class="items_dialog">
+						<div class="items">
+							<div><img src="assets/img/cappuccino.png" alt="" /></div>
+						</div>
+						<div class="item_info">
+							<p>Капичино</p>
+							<p>Карамельный сироп</p>
+							<p>300 мл</p>
+						</div>
+						<div class="cost">
+							<span>250 рублей</span>
+						</div>
+					</div>
 					<div class="more">
 						<div class="more_title">Что-то еще?</div>
 						<div class="items_grid">
 							<div class="item_grid">
 								<div class="title_mini">Сендвич<br />с куричей</div>
-								<div><img src="assets/img/pngegg 3.png" alt="" /></div>
+								<div class="more-img">
+									<img src="assets/img/pngegg 3.png" alt="" />
+								</div>
 								<div class="cost_grid">
 									<span>150 руб</span>
 									<span>1 шт</span>
@@ -363,7 +391,9 @@
 							</div>
 							<div class="item_grid">
 								<div class="title_mini">Сендвич<br />с лососем</div>
-								<div><img src="assets/img/pngegg 4.png" alt="" /></div>
+								<div class="more-img">
+									<img src="assets/img/pngegg 4.png" alt="" />
+								</div>
 								<div class="cost_grid">
 									<span>150 руб</span>
 									<span>1 шт</span>
