--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 						<div><img src="assets/img/cappuccino.png" alt="" /></div>
 					</div>
 					<div class="item_info">
-						<p>Капичино</p>
+						<p>Капучино</p>
 						<p>Карамельный сироп</p>
 						<p>300 мл</p>
 					</div>
@@ -349,7 +349,7 @@
 						<div><img src="assets/img/cappuccino.png" alt="" /></div>
 					</div>
 					<div class="item_info">
-						<p>Капичино</p>
+						<p>Капучино</p>
 						<p>Карамельный сироп</p>
 						<p>300 мл</p>
 					</div>
@@ -362,7 +362,7 @@
 						<div><img src="assets/img/cappuccino.png" alt="" /></div>
 					</div>
 					<div class="item_info">
-						<p>Капичино</p>
+						<p>Капучино</p>
 						<p>Карамельный сироп</p>
 						<p>300 мл</p>
 					</div>
