--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 			<div class="main_categories">
 				<a class="category category_on_active" id="category" href="#popularGoods">Популярное</a>
 				<a class="category" id="category2" href="#drinks">Напитки</a>
-				<a class="category" id="category3" href="#bakeryGoods">Выпечка</a>
-				<a class="category" id="#" href="">Акции</a>
+				<a class="category" id="category3" href="#bakeryGoods">Кофе</a>
 			</div>
 
 			<div>
